# libottery

./: .gitignore  COPYING  Makefile  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac  libottery.pc.in
doc/: specification.txt
etc/: doxygen.conf  uncrustify.cfg
m4/: .gitignore  ottery_local.m4
src/: aes128.c  aes192.c  aes256.c  aesni.c  chacha.c  chacha.h  chacha12.c  chacha20.c  chacha8.c  chacha_krovetz.c  chacha_merged.c  ottery-config.h  ottery-internal.h  ottery-threading.h  ottery.c  ottery.h  ottery_chacha.c  ottery_common.h  ottery_cpuinfo.c  ottery_entropy.c  ottery_entropy_cryptgenrandom.c  ottery_entropy_egd.c  ottery_entropy_rdrand.c  ottery_entropy_urandom.c  ottery_global.c  ottery_nolock.h  ottery_osrng.c  ottery_st.h
test/: Ottery.hs  bench_rng.c  dump_bytes.c  fake_egd.c  make_test_vectors.py  ottery.hs  st_wrappers.h  streams.c  streams.h  test_deep.c  test_egd.c  test_egd.py  test_memclear.c  test_ottery.hs  test_shallow.c  test_spec.c  test_spec_cmp.sh  test_spec_seed  test_stateful.c  test_vector_cmp.sh  test_vectors.c  test_vectors.expected
test/hs/: ChaCha.hs  Ottery.hs  test_ottery.hs
